[metadata]
name = wh
author = Adriano Freitas
author_email = agf.adriano@gmail.com
description = WH Score
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.1.0

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7
install_requires = 
    pandas == 1.4.4
    mlflow == 1.28.0
    scikit-learn == 1.1.2
    s3fs==2022.8.2
    python-dotenv==0.21.0
    requests==2.28.1
    boto3==1.24.59
    xgboost==1.6.2

[options.extras_require]
dev = 
    pytest >= 5.2
    matplotlib == 3.5.3
    ipykernel == 6.15.3
    black == 22.8.0

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    build-data = wh.pipeline.build_data:build_df
    model-train = wh.pipeline.train:main
    predict = wh.pipeline.predict:main
